# tomoe

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DESIGN.md  FUSION.md  PLAN.md  README.md  flake.nix  run-tty.sh
.claude/skills/next/: SKILL.md
.pi/skills/next/: SKILL.md
crates/moonshell/: Cargo.toml
crates/moonshell-render/: Cargo.toml
crates/moonshell-render/src/: assets.rs  draw.rs  element.rs  layout.rs  lib.rs  scene.rs
crates/moonshell-runtime/: Cargo.toml
crates/moonshell-runtime/src/: api.rs  element.rs  exec.rs  lib.rs  painter.rs  services_bridge.rs  state.rs  timer.rs  watch.rs  window.rs
crates/moonshell-services/: Cargo.toml
crates/moonshell-services/src/: battery.rs  dbus.rs  lib.rs  mpris.rs  network.rs  notifications.rs
crates/moonshell-services/src/compositor/: hyprland.rs  mod.rs  niri.rs  sway.rs  tomoe.rs  wire.rs
crates/moonshell-surface/: Cargo.toml
crates/moonshell-surface/src/: lib.rs
crates/moonshell/examples/: simple_bar.rs  two_bars.rs
crates/moonshell/src/: main.rs  watcher.rs
crates/takhti/: Cargo.toml
crates/takhti/src/: coords.rs  cursor.rs  handlers.rs  input.rs  layout.rs  lua.rs  main.rs  render.rs  space.rs  state.rs
crates/takhti/src/backend/: mod.rs  tty.rs  winit.rs
crates/takhti/src/ui/: config_error_notification.rs  exit_confirm_dialog.rs  hotkey_overlay.rs  mod.rs  text.rs
crates/tomoe/: Cargo.toml
crates/tomoe-ipc/: Cargo.toml
crates/tomoe-ipc/src/: lib.rs
crates/tomoe/src/: animation.rs  capture.rs  coords.rs  cursor.rs  docgen.rs  foreign_toplevel.rs  handlers.rs  input.rs  ipc.rs  layout.rs  lock.rs  lua.rs  main.rs  process.rs  render.rs  screenshot.rs  shell.rs  space.rs  state.rs  xwayland.rs
crates/tomoe/src/backend/: mod.rs  tty.rs  winit.rs
crates/tomoe/src/protocols/: background_effect.rs  mod.rs  screencopy.rs  wlr_foreign_toplevel.rs
crates/tomoe/src/render/: blur.rs  border.rs  framebuffer_effect.rs  mod.rs  resources.rs  shader_element.rs  shaders.rs  shadow.rs
crates/tomoe/src/render/shaders/: blur.vert  blur_down.frag  blur_mask.frag  blur_up.frag  border.frag  shadow.frag  texture.vert
crates/tomoe/src/ui/: config_error_notification.rs  exit_confirm_dialog.rs  hotkey_overlay.rs  mod.rs  screenshot_ui.rs  text.rs  widgets.rs
crates/xdg-desktop-portal-tomoe/: Cargo.toml
crates/xdg-desktop-portal-tomoe/src/: main.rs  outputs.rs  pipewire_stream.rs  screencast.rs  toplevel_stream.rs  toplevels.rs
docs/: lua-api.md  moonshell-DESIGN.md  moonshell-PLAN.md  moonshell-README.md
examples/: layer-blur.lua
examples/simple-bar/: init.lua
resources/: init.lua  screencast.lua  tomoe-portals.conf  tomoe-session.target  tomoe.portal  wm.lua  zoomer.lua
resources/examples/: extension-surface-init.lua  zoomer-init.lua
resources/meta/: moonshell.lua  tomoe.lua
resources/moonshell/: notifications.lua  services.lua  shell_ext.lua  stdlib.lua  theme.lua  utils.lua
resources/moonshell/widgets/: battery.lua  clock.lua  media_panel.lua  mpris.lua  network.lua  volume_panel.lua  workspaces.lua
scripts/: gen-arch.sh
