[workspace]
members = [
    "crates/moonshell",
    "crates/surface",
    "crates/render",
    "crates/runtime",
    "crates/services",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2"
calloop = "0.14"
calloop-wayland-source = "0.4"
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
tiny-skia = "0.12"
cosmic-text = "0.19"
# default features off: no SVG-embedded text/raster-images machinery —
# icon themes are pure vector, and fontdb already lives in cosmic-text.
resvg = { version = "0.47", default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# vendored: LuaJIT compiled into the binary — no system Lua, single
# artifact. LuaJIT (not 5.4) is a locked decision: the FFI escape hatch.
mlua = { version = "0.10", features = ["luajit", "vendored"] }
# default features off: no tokio/futures "stream" machinery — the fd is
# a calloop Generic source.
inotify = { version = "0.11", default-features = false }
serde_json = "1.0"
# D-Bus for the native services (UPower, NetworkManager, MPRIS, …).
# rustbus, not zbus: pure-Rust, synchronous, exposes the socket fd —
# it rides calloop as a `Generic` source with no async executor. zbus
# structurally needs one (async-io reactor thread or tokio), which the
# single-thread locked decision forbids (recorded in DESIGN.md).
rustbus = "0.19"
# The tomoe wire contract, pulled over git (doctrine 03: repo separation
# keeps the versioned wire the only channel between the pair). Pin = a
# plain rev, bumped deliberately when the protocol grows.
tomoe-ipc = { git = "https://github.com/y0usaf/tomoe", rev = "8862c257d8a37a66079ffe1e18d1bfcd2e16ff72" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

moonshell-surface = { path = "crates/surface" }
moonshell-render = { path = "crates/render" }
moonshell-runtime = { path = "crates/runtime" }
moonshell-services = { path = "crates/services" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
