[workspace]
members = [
    "crates/tomoe",
    "crates/tomoe-ipc",
    "crates/xdg-desktop-portal-tomoe",
    "crates/moonshell",
    "crates/moonshell-surface",
    "crates/moonshell-render",
    "crates/moonshell-runtime",
    "crates/moonshell-services",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
calloop = "0.14"
calloop-wayland-source = "0.4"
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
tiny-skia = "0.12"
cosmic-text = "0.19"
# default features off: no SVG-embedded text/raster-images machinery —
# icon themes are pure vector, and fontdb already lives in cosmic-text.
resvg = { version = "0.47", default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# vendored: LuaJIT compiled into the binary — no system Lua, single
# artifact. LuaJIT (not 5.4) is a locked decision: the FFI escape hatch.
# (tomoe adds "serialize" in its own manifest; features unify.)
mlua = { version = "0.10", features = ["luajit", "vendored"] }
# default features off: no tokio/futures "stream" machinery — the fd is
# a calloop Generic source.
inotify = { version = "0.11", default-features = false }
# D-Bus for the native services (UPower, NetworkManager, MPRIS, …).
# rustbus, not zbus: pure-Rust, synchronous, exposes the socket fd —
# it rides calloop as a `Generic` source with no async executor. zbus
# structurally needs one (async-io reactor thread or tokio), which the
# single-thread locked decision forbids (recorded in DESIGN.md).
rustbus = "0.19"
# Fused (FUSION.md F0): the wire contract is now a workspace path dep.
# tomoe-ipc remains the versioned wire for *external* clients.
tomoe-ipc = { path = "crates/tomoe-ipc" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

moonshell-surface = { path = "crates/moonshell-surface" }
moonshell-render = { path = "crates/moonshell-render" }
moonshell-runtime = { path = "crates/moonshell-runtime" }
moonshell-services = { path = "crates/moonshell-services" }

# niri 26.4's Smithay pin (ff5fa7df) + one commit: async (tearing) page
# flip support, which upstream still lacks. Fork branch `tomoe-tearing`
# carries exactly that commit; rebase it when bumping the pin.
[workspace.dependencies.smithay]
git = "https://github.com/y0usaf/smithay.git"
rev = "4ca26929d77c9cf6e3e837e633d2efa386a78adf"
default-features = false

[workspace.dependencies.smithay-drm-extras]
git = "https://github.com/y0usaf/smithay.git"
rev = "4ca26929d77c9cf6e3e837e633d2efa386a78adf"
default-features = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
