[package]
name = "moonshell-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# channel (exec_async replies) and timer types only — the loop itself
# lives in the binary.
calloop.workspace = true
mlua.workspace = true
moonshell-render.workspace = true
moonshell-surface.workspace = true
tracing.workspace = true
