[package]
name = "tomoe"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck = { version = "1", features = ["derive"] }
drm-ffi = "0.9.1"
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
fontdue = "0.9"
glam = "0.30"
jiff = "0.2"
mlua = { version = "0.10", features = ["luajit", "vendored", "serialize"] }
# The fused shell (FUSION.md F1/F2): element trees raster on the CPU
# and composite as damage-tracked textures; the runtime provides the
# ui.*/shell.* Lua surface registered into tomoe's VM.
moonshell-render.workspace = true
moonshell-runtime.workspace = true
# Transitional until F6 (surface-option vocabulary re-homes when the
# SCTK client stack is deleted).
moonshell-surface.workspace = true
png = "0.17"
serde_json.workspace = true
smithay-drm-extras.workspace = true
tomoe-ipc = { path = "../tomoe-ipc" }
xcursor = "0.3"

[dependencies.smithay]
workspace = true
features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_winit",
    "desktop",
    "renderer_gl",
    "renderer_multi",
    "use_system_lib",
    "wayland_frontend",
]
