[package]
name = "xdg-desktop-portal-tomoe"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xdg-desktop-portal-tomoe"
path = "src/main.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
rustix = { version = "1", features = ["fs"] }
pipewire = { version = "0.9", features = ["v0_3_77"] }
gbm = { version = "0.18", default-features = false, features = ["drm-support"] }
drm-fourcc = "2.2"
